// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppCityPage Should render Main city banner 1`] = `
<section
  class="MainBanner is-StateCA"
  data-testid="main-banner"
>
  <div
    class="wrapper-1180 flex-wrapper"
  >
    <section
      class="flex-spacer MainBanner-content"
    >
      <h1
        class="h2 MainBanner-title"
      >
        California
      </h1>
      <ul
        class="unordered MainBanner-list"
      >
        <li
          class="MainBanner-listItem"
        >
          <div
            class="icon"
          >
            <div>
              <div
                data-src="icon-check-mark.svg"
                src=""
              />
            </div>
          </div>
          one
        </li>
        <li
          class="MainBanner-listItem"
        >
          <div
            class="icon"
          >
            <div>
              <div
                data-src="icon-check-mark.svg"
                src=""
              />
            </div>
          </div>
          two
        </li>
      </ul>
      <a
        class="MainBanner-callLink"
        data-track-call="true"
        href="tel:+1234"
      >
        <div
          class="icon"
        >
          <div>
            <div
              data-src="icon-phone-green.svg"
              src=""
            />
          </div>
        </div>
        <span>
          Call us now 
          +1234
        </span>
      </a>
      <div
        class="BannerRating"
      >
        <div
          class="BannerRating-stars"
        >
          <ul
            class="stars-group"
          >
            <li
              class="rating-icon star"
            >
              <div>
                <div>
                  <div
                    data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                    src=""
                  />
                </div>
              </div>
            </li>
            <li
              class="rating-icon star"
            >
              <div>
                <div>
                  <div
                    data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                    src=""
                  />
                </div>
              </div>
            </li>
            <li
              class="rating-icon star"
            >
              <div>
                <div>
                  <div
                    data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                    src=""
                  />
                </div>
              </div>
            </li>
            <li
              class="rating-icon star"
            >
              <div>
                <div>
                  <div
                    data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                    src=""
                  />
                </div>
              </div>
            </li>
            <li
              class="rating-icon star half"
            >
              <div>
                <div>
                  <div
                    data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                    src=""
                  />
                </div>
              </div>
            </li>
          </ul>
          <p>
            4.7
            /5
          </p>
        </div>
        <div
          class="BannerRating-ratingText"
        >
          <div>
            <p>
              Based on 
              2,404
               reviews
            </p>
            <p>
              & 
              10,100
               fences installed!
            </p>
          </div>
          <div
            class="is-ArrowImg"
          >
            <div>
              <div
                data-src="arrow-flat.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="desktop-length flex-spacer MainBanner-form"
    >
      Tell Us Form
    </section>
  </div>
</section>
`;

exports[`AppCityPage Should render city banner 1`] = `
<section
  class="CityBanner"
  data-testid="city-banner"
>
  <section
    class="CityBanner-wrapper wrapper-1180"
  >
    <section
      class="CityBanner-content"
    >
      <aside
        class="CityBanner-desc"
      >
        <aside
          class="CityBanner-info"
        >
          <h1
            class="h4 is-grey"
          >
            #1 Fence Company in 
            Coruscant
          </h1>
          <h2
            class="h2"
          >
            Finally a fence company 
            <br />
            you can trust
          </h2>
          <h3
            class="h4"
          >
            Get your fence installed 
            <br />
            by a world-class expert.
          </h3>
          <h3
            class="h4"
          >
            Zero hassle. Fair prices. No hidden fees.
          </h3>
        </aside>
        <a
          class="CityBanner-call"
          href="tel:+16503004854"
        >
          <button
            class="button button--action button--size__medium taste__solid is-action"
          >
            <div>
              <div>
                <div
                  data-src="icon-call.svg"
                  src=""
                />
              </div>
            </div>
             Call us now
          </button>
        </a>
        <div
          class="BannerRating"
        >
          <div
            class="BannerRating-stars"
          >
            <ul
              class="stars-group"
            >
              <li
                class="rating-icon star"
              >
                <div>
                  <div>
                    <div
                      data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                      src=""
                    />
                  </div>
                </div>
              </li>
              <li
                class="rating-icon star"
              >
                <div>
                  <div>
                    <div
                      data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                      src=""
                    />
                  </div>
                </div>
              </li>
              <li
                class="rating-icon star"
              >
                <div>
                  <div>
                    <div
                      data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                      src=""
                    />
                  </div>
                </div>
              </li>
              <li
                class="rating-icon star"
              >
                <div>
                  <div>
                    <div
                      data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                      src=""
                    />
                  </div>
                </div>
              </li>
              <li
                class="rating-icon star half"
              >
                <div>
                  <div>
                    <div
                      data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                      src=""
                    />
                  </div>
                </div>
              </li>
            </ul>
            <p>
              4.7
              /5
            </p>
          </div>
          <div
            class="BannerRating-ratingText"
          >
            <div>
              <p>
                Based on 
                2,404
                 reviews
              </p>
              <p>
                & 
                10,100
                 fences installed!
              </p>
            </div>
            <div
              class="is-ArrowImg"
            >
              <div>
                <div
                  data-src="arrow-flat.svg"
                  src=""
                />
              </div>
            </div>
          </div>
        </div>
      </aside>
    </section>
    <p
      class="is-tablet"
    >
      or
    </p>
    <section
      class="CityBanner-form"
    >
      Tell Us Form
    </section>
  </section>
</section>
`;

exports[`AppCityPage should render 1`] = `
<div>
  <div
    class="AppCityPage"
  >
    <section
      class="CityBanner"
      data-testid="city-banner"
    >
      <section
        class="CityBanner-wrapper wrapper-1180"
      >
        <section
          class="CityBanner-content"
        >
          <aside
            class="CityBanner-desc"
          >
            <aside
              class="CityBanner-info"
            >
              <h1
                class="h4 is-grey"
              >
                #1 Fence Company in 
                Alameda
              </h1>
              <h2
                class="h2"
              >
                Finally a fence company 
                <br />
                you can trust
              </h2>
              <h3
                class="h4"
              >
                Get your fence installed 
                <br />
                by a world-class expert.
              </h3>
              <h3
                class="h4"
              >
                Zero hassle. Fair prices. No hidden fees.
              </h3>
            </aside>
            <a
              class="CityBanner-call"
              href="tel:+16503004854"
            >
              <button
                class="button button--action button--size__medium taste__solid is-action"
              >
                <div>
                  <div>
                    <div
                      data-src="icon-call.svg"
                      src=""
                    />
                  </div>
                </div>
                 Call us now
              </button>
            </a>
            <div
              class="BannerRating"
            >
              <div
                class="BannerRating-stars"
              >
                <ul
                  class="stars-group"
                >
                  <li
                    class="rating-icon star"
                  >
                    <div>
                      <div>
                        <div
                          data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                          src=""
                        />
                      </div>
                    </div>
                  </li>
                  <li
                    class="rating-icon star"
                  >
                    <div>
                      <div>
                        <div
                          data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                          src=""
                        />
                      </div>
                    </div>
                  </li>
                  <li
                    class="rating-icon star"
                  >
                    <div>
                      <div>
                        <div
                          data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                          src=""
                        />
                      </div>
                    </div>
                  </li>
                  <li
                    class="rating-icon star"
                  >
                    <div>
                      <div>
                        <div
                          data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                          src=""
                        />
                      </div>
                    </div>
                  </li>
                  <li
                    class="rating-icon star half"
                  >
                    <div>
                      <div>
                        <div
                          data-src="/assets/ff55facd77386d26dd4b3766dc6e7c20.svg"
                          src=""
                        />
                      </div>
                    </div>
                  </li>
                </ul>
                <p>
                  4.7
                  /5
                </p>
              </div>
              <div
                class="BannerRating-ratingText"
              >
                <div>
                  <p>
                    Based on 
                    2,404
                     reviews
                  </p>
                  <p>
                    & 
                    10,100
                     fences installed!
                  </p>
                </div>
                <div
                  class="is-ArrowImg"
                >
                  <div>
                    <div
                      data-src="arrow-flat.svg"
                      src=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </aside>
        </section>
        <p
          class="is-tablet"
        >
          or
        </p>
        <section
          class="CityBanner-form"
        >
          Tell Us Form
        </section>
      </section>
    </section>
    <section
      class="wrapper-1180"
    >
      <div
        class="TestimonialBanner"
      >
        <div
          class="TestimonialBanner-badge"
        >
          <img
            alt="testimonial organization"
            src="thumbtack.svg"
          />
          <span
            class="badge--txt is-bold"
          >
            4.4
             rating
          </span>
          <span
            class="badge--txt is-grey"
          >
            38
             REVIEWS
          </span>
        </div>
        <div
          class="TestimonialBanner-badge"
        >
          <img
            alt="testimonial organization"
            src="yelp.svg"
          />
          <span
            class="badge--txt is-bold"
          >
            4.5
             rating
          </span>
          <span
            class="badge--txt is-grey"
          >
            2127
             REVIEWS
          </span>
        </div>
        <div
          class="TestimonialBanner-badge"
        >
          <img
            alt="testimonial organization"
            src="google.svg"
          />
          <span
            class="badge--txt is-bold"
          >
            4.9
             rating
          </span>
          <span
            class="badge--txt is-grey"
          >
            441
             REVIEWS
          </span>
        </div>
        <div
          class="TestimonialBanner-badge"
        >
          <img
            alt="testimonial organization"
            src="angi.svg"
          />
          <span
            class="badge--txt is-bold"
          >
            4.5
             rating
          </span>
          <span
            class="badge--txt is-grey"
          >
            156
             REVIEWS
          </span>
        </div>
        <div
          class="TestimonialBanner-badge"
        >
          <img
            alt="testimonial organization"
            src="bbb.svg"
          />
          <span
            class="badge--txt is-bold"
          >
            A
             rating
          </span>
          <span
            class="badge--txt is-grey"
          >
            ACCREDITED
          </span>
        </div>
      </div>
    </section>
    <section
      class="wrapper-1180 CityReviews"
    >
      <div
        class="CityReviews-container"
      >
        <div
          class="CityReviews-review"
        >
          <div
            class="CityReviews-imgContainer"
          >
            <img
              src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1RGiBpSQtBWBKilzhKyxyY0Oyj8yKRwRw.jpeg"
            />
          </div>
          <div>
            <p
              class="h5"
            >
              We had a very positive experience with Ergeon.
            </p>
            <p
              class="CityReviews-description"
            >
              We had a very positive experience with Ergeon. We requested a quote a couple of months ago and when we were ready to do the job, we reached out to Joan. Within about a week after finalizing the plan/price, the installers came and did an awesome job within that day. For privacy reasons, I didn't include any pictures but highly recommend them and will use them again for future projects!
            </p>
            <p
              class="small-text"
            >
              Michelle Y.
            </p>
            <address
              class="small-text"
            >
              Oak Street, Alameda
            </address>
            <p
              class="small-text"
            >
              <a
                href="https://www.yelp.com/biz/ergeon-oakland-3?hrid=juKC2GkzK9KoYpOgs19SXg&utm_campaign=www_review_share_popup&utm_medium=copy_link&utm_source=(direct)"
                rel="nofollow"
              >
                Read this review
              </a>
              <span>
                 on 
                Yelp
              </span>
            </p>
          </div>
        </div>
        <div
          class="CityReviews-review"
        >
          <div
            class="CityReviews-imgContainer"
          >
            <img
              src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1Z2bef-esL7yCGSN6UAvDKGUku_3IkBF0.jpeg"
            />
          </div>
          <div>
            <p
              class="h5"
            >
              The fence was completed without a hitch, including cleaning of the work site and removal of all debris as promised.
            </p>
            <p
              class="CityReviews-description"
            >
              My family used Ergeon to replace our redwood fence. The entire Ergeon staff team from the gentleman who provided the quote, the scheduling and billing support Oscar & Joan and the work crew were a pleasure to work with (very professional, responsive, respectful and outstanding). The fence was completed without a hitch, including cleaning of the work site and removal of all debris as promised. I will certainly use Ergeon in the future and highly recommend them to everyone looking for a fence and driveway contractor.
            </p>
            <p
              class="small-text"
            >
              Craig C.
            </p>
            <address
              class="small-text"
            >
              Crystal Springs Ct, Newark
            </address>
            <p
              class="small-text"
            >
              <a
                href="https://g.page/r/CS57QC7cBRZXEBA"
                rel="nofollow"
              >
                Read this review
              </a>
              <span>
                 on 
                Google
              </span>
            </p>
          </div>
        </div>
      </div>
    </section>
    <section
      class="wrapper-1180 RecentProjects"
    >
      <h2
        class="h3"
      >
        Projects Recently Completed in 
        Alameda
      </h2>
      <div
        class="flex-wrapper RecentProjects-container"
      >
        <div
          class="flex-spacer RecentProjects-project"
        >
          <a
            href="http://ergeon.local:6500/projects-gallery/projects/fence-and-gate-installation-in-alameda-ca-northern-california-east-bay-alameda-77222"
          >
            <img
              alt="Picture Frame Board on Board With Diagonal Lattice Fence"
              src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1wFU_9_tP1TPxbZ9JcedjQOyxepbulm7a.jpeg"
            />
          </a>
          <div
            class="RecentProjects-projectCaption"
          >
            <a
              href="http://ergeon.local:6500/projects-gallery/projects/fence-and-gate-installation-in-alameda-ca-northern-california-east-bay-alameda-77222"
            >
              <span>
                Picture Frame Board on Board With Diagonal Lattice Fence
              </span>
            </a>
          </div>
        </div>
        <div
          class="flex-spacer RecentProjects-project"
        >
          <a
            href="http://ergeon.local:6500/projects-gallery/projects/fence-installation-in-alameda-ca-northern-california-east-bay-alameda-98069"
          >
            <img
              alt="Nail Up Flat Top With Kickboard Fence"
              src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1MzuOIgwpmB79RHMcR2D1wym1t1mODuAF.jpeg"
            />
          </a>
          <div
            class="RecentProjects-projectCaption"
          >
            <a
              href="http://ergeon.local:6500/projects-gallery/projects/fence-installation-in-alameda-ca-northern-california-east-bay-alameda-98069"
            >
              <span>
                Nail Up Flat Top With Kickboard Fence
              </span>
            </a>
          </div>
        </div>
      </div>
    </section>
    <section
      class="tablet-length"
    >
      Tell Us Form
    </section>
    <section
      class="wrapper-1180 Packages"
    >
      <h2
        class="h3 spacing after__is-6"
      >
        Our Alameda fence Packages
      </h2>
      <p
        class="spacing after__is-30"
      >
        Choose the most popular fence package in your area
      </p>
      <section>
        <h3
          class="h4 spacing after__is-12"
        >
          Wood Fences
        </h3>
        <section
          class="cards four-columns Packages-container"
        >
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/14pVDkLbAWrOc5Ns2l7YcZe3MDz23L-Iw.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Premium - Flat Top
              </p>
              <p
                class="Packages-description"
              >
                Nail Up 1" x 8" Flat Top Redwood Con Common Pickets, Side by Side, 4" x 4" PT Posts
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1jZf_yW4Khn05bhT8hDX-nwZTMMB7fN_f.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Nail Up - Horizontal
              </p>
              <p
                class="Packages-description"
              >
                Nail Up 1" x 8" Flat Top Redwood Con Common Pickets, Horizontal, 4" x 4" PT Posts
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1FkRFjkguBHCfcLd5THc9ZxlkANuWoCxd.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Picture Frame
              </p>
              <p
                class="Packages-description"
              >
                Picture Frame 1" x 8" Flat Top Redwood Con Common Pickets, Board on Board, 8" PT Kickboard, 4" x 4" PT Post
              </p>
            </div>
          </div>
        </section>
      </section>
      <section>
        <h3
          class="h4 spacing after__is-12"
        >
          Chainlink Fences
        </h3>
        <section
          class="cards four-columns Packages-container"
        >
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1Z872D3vqeZSRbrwewkId11qBD2ZaNAqo.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Standard
              </p>
              <p
                class="Packages-description"
              >
                2" Openings 11 ga. Galvanized Steel Fabric, 1 5/8 16 ga. Top Rail, 1 7/8, 16 ga. Line Post, 2 3/8, 16 ga. Terminal Post
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1nzyncXknEpX_w7AVe3a7q-O8O9zHd7qr.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Small Commercial
              </p>
              <p
                class="Packages-description"
              >
                2" Openings 9 ga. Galvanized Steel Fabric, 1 5/8 16 ga. Top Rail, 1 7/8, 14 ga. Line Post, 2 3/8, 14 ga. Terminal Post
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/16hDSZgW4VRMX88J1G7J12Zwv1mUIIhG4.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Large Commercial
              </p>
              <p
                class="Packages-description"
              >
                2" Openings 9 ga. Galvanized Steel Fabric, 1 5/8 16 ga. Top Rail, 1 7/8, Sch20 Line Post, 2 3/8, Sch20 Terminal Post
              </p>
            </div>
          </div>
        </section>
      </section>
      <section>
        <h3
          class="h4 spacing after__is-12"
        >
          Box Wire
        </h3>
        <section
          class="cards four-columns Packages-container"
        >
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1A1T9JeaU8p6YYrqqWIUF_aSMKrXXys15.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Deer Fence
              </p>
              <p
                class="Packages-description"
              >
                Box Wire PT Frame, Welded Wire 14 ga. Galvanized Steel Fabric, 4" x 4" PT Post
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1flny4XLVyCYo27jGoO-QagcgFPrZRJ_n.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Hog Wire
              </p>
              <p
                class="Packages-description"
              >
                Box Wire Redwood Con Common Frame, Welded Wire 6 ga. Powder Coated Steel Fabric, 2” × 8” PT Kickboard, 4" x 4" PT Post
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1wvCXuXpKJyLBOky7iNZqunQNWcIMgW0P.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                Top Deer Fence
              </p>
              <p
                class="Packages-description"
              >
                Box Wire Redwood Con Common Frame, Welded Wire 14 ga. Galvanized Steel Fabric, 2” × 12” PT Kickboard, 4" x 4" PT Post
              </p>
            </div>
          </div>
          <div
            class="equal-height-JlocK"
          >
            <div
              class="card Packages-item-padding soft-border shadow__z0 Packages-item"
            >
              <img
                data-testid="test-image"
                src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1LbgYXMkI2VjL3ncJCPQ3u9ZkVEbGwboe.jpeg"
              />
              <p
                class="h5 Packages-title"
              >
                T-Post
              </p>
              <p
                class="Packages-description"
              >
                Welded Wire 14 ga. Galvanized Steel Fabric, Steel T-post
              </p>
            </div>
          </div>
        </section>
      </section>
    </section>
    <section
      class="wrapper-1180 Regulations"
    >
      <h2
        class="h3 spacing after__is-30"
      >
        Alameda
         Permits & Regulations
      </h2>
      <div
        class="flex-wrapper Regulations-container"
      >
        <div
          class="flex-spacer Regulations-row"
        >
          <div
            class="desktop-length"
          >
            <ul
              class="unordered spacing after__is-24"
            >
              <li
                class="spacing after__is-12"
              >
                <b>
                  What height of the fence can I put up in my front yard?
                </b>
                 
                <br />
                3 feet, 4 feet (3 feet +2 feet 50% open top), 5 feet with a Planning Permit
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  How high can a side fence be?
                </b>
                 
                <br />
                6 feet solid fence, 8 feet (6 feet + 2 feet 50% open lattice)
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  What is the maximum height of a backyard fence?
                </b>
                 
                <br />
                6 feet solid fence,  8 feet (6 feet + 2 feet 50% open lattice)
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  How close to the property line can I build a fence?
                </b>
                 
                <br />
                no setbacks specific to fence
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  What is the maximum height of a fence if my property is located on a corner lot?
                </b>
                 
                <br />
                3 feet Max 20 feet Visibility Triangle Area.
              </li>
            </ul>
          </div>
          <div
            class="tablet-length"
          >
            <ul
              class="unordered spacing after__is-24"
            >
              <li
                class="spacing after__is-12"
              >
                <b>
                  What height of the fence can I put up in my front yard?
                </b>
                 
                <br />
                3 feet, 4 feet (3 feet +2 feet 50% open top), 5 feet with a Planning Permit
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  How high can a side fence be?
                </b>
                 
                <br />
                6 feet solid fence, 8 feet (6 feet + 2 feet 50% open lattice)
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  What is the maximum height of a backyard fence?
                </b>
                 
                <br />
                6 feet solid fence,  8 feet (6 feet + 2 feet 50% open lattice)
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  How close to the property line can I build a fence?
                </b>
                 
                <br />
                no setbacks specific to fence
              </li>
              <li
                class="spacing after__is-12"
              >
                <b>
                  What is the maximum height of a fence if my property is located on a corner lot?
                </b>
                 
                <br />
                3 feet Max 20 feet Visibility Triangle Area.
              </li>
            </ul>
          </div>
          <div
            class="mobile-length Regulations-mobile"
          >
            <div
              class="Regulation-item"
            >
              <section
                class="Collapsible"
              >
                <button
                  class="Collapsible-headerBtn"
                >
                  <p
                    class="h4"
                  >
                    What height of the fence can I put up in my front yard?
                  </p>
                  <img
                    class="Collapsible-icon"
                    src="/assets/d5aec93f50f5220b65b98b278d58594e.svg"
                  />
                </button>
                <div
                  class="Collapsible-content"
                  style="height: 0px;"
                >
                  3 feet, 4 feet (3 feet +2 feet 50% open top), 5 feet with a Planning Permit
                </div>
              </section>
            </div>
            <div
              class="Regulation-item"
            >
              <section
                class="Collapsible"
              >
                <button
                  class="Collapsible-headerBtn"
                >
                  <p
                    class="h4"
                  >
                    How high can a side fence be?
                  </p>
                  <img
                    class="Collapsible-icon"
                    src="/assets/d5aec93f50f5220b65b98b278d58594e.svg"
                  />
                </button>
                <div
                  class="Collapsible-content"
                  style="height: 0px;"
                >
                  6 feet solid fence, 8 feet (6 feet + 2 feet 50% open lattice)
                </div>
              </section>
            </div>
            <div
              class="Regulation-item"
            >
              <section
                class="Collapsible"
              >
                <button
                  class="Collapsible-headerBtn"
                >
                  <p
                    class="h4"
                  >
                    What is the maximum height of a backyard fence?
                  </p>
                  <img
                    class="Collapsible-icon"
                    src="/assets/d5aec93f50f5220b65b98b278d58594e.svg"
                  />
                </button>
                <div
                  class="Collapsible-content"
                  style="height: 0px;"
                >
                  6 feet solid fence,  8 feet (6 feet + 2 feet 50% open lattice)
                </div>
              </section>
            </div>
            <div
              class="Regulation-item"
            >
              <section
                class="Collapsible"
              >
                <button
                  class="Collapsible-headerBtn"
                >
                  <p
                    class="h4"
                  >
                    How close to the property line can I build a fence?
                  </p>
                  <img
                    class="Collapsible-icon"
                    src="/assets/d5aec93f50f5220b65b98b278d58594e.svg"
                  />
                </button>
                <div
                  class="Collapsible-content"
                  style="height: 0px;"
                >
                  no setbacks specific to fence
                </div>
              </section>
            </div>
            <div
              class="Regulation-item"
            >
              <section
                class="Collapsible"
              >
                <button
                  class="Collapsible-headerBtn"
                >
                  <p
                    class="h4"
                  >
                    What is the maximum height of a fence if my property is located on a corner lot?
                  </p>
                  <img
                    class="Collapsible-icon"
                    src="/assets/d5aec93f50f5220b65b98b278d58594e.svg"
                  />
                </button>
                <div
                  class="Collapsible-content"
                  style="height: 0px;"
                >
                  3 feet Max 20 feet Visibility Triangle Area.
                </div>
              </section>
            </div>
          </div>
          <p>
            Learn more about 
            <a
              href="https://library.municode.com/ca/alameda/codes/code_of_ordinances?nodeId=CHXXXDERE_ARTIZODIRE_30-5GEPREX_30-5.14BAFE"
              target="__blank"
            >
              Alameda
               – City Regulations
            </a>
            .
          </p>
        </div>
        <div
          class="flex-spacer Regulations-row desktop-length"
        >
          <a
            href="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1Q5PFA_a2AfN62pI1gZUjv6-erBcayykP.pdf"
            target="__blank"
          >
            <img
              src="https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1Y1NEewzmT2dB07yV1wbxSrndJ19h0hdn.jpeg"
            />
          </a>
        </div>
      </div>
    </section>
    <section>
      <div
        class="remote-features"
      >
        <div
          class="remote-features-wrapper"
        >
          <div
            class="remote-features-title"
          >
            <h2
              class="h3"
            >
              3 Ways We Make Your Installation Easy
            </h2>
          </div>
          <div
            class="remote-features-cards"
          >
            <div
              class="remote-features-card"
            >
              <div
                class="remote-features-card-img"
              >
                <img
                  alt="Video Call for your Onsite Visit"
                  src="icon-remote-onsite.svg"
                />
              </div>
              <div
                class="remote-features-card-details"
              >
                <div
                  class="remote-features-card-info"
                >
                  <h3
                    class="h5 remote-features-card-title"
                  >
                    Video Call for your Onsite Visit
                  </h3>
                  <p
                    class="remote-features-card-desc"
                  >
                    Our Team is well equipped to guarantee an accurate quote for your project using satellite imagery and a video consultation.
                  </p>
                </div>
                <a
                  class="button button--primary button--size__medium taste__line remote-features-card-button"
                  href="https://dev.ergeon.com/blog/post/a-walk-through-of-our-remote-experience"
                >
                  Learn more
                </a>
              </div>
            </div>
            <div
              class="remote-features-card-sep-wrapper"
            >
              <div
                class="remote-features-card-sep-wrapper-line"
              />
            </div>
            <div
              class="remote-features-card"
            >
              <div
                class="remote-features-card-img"
              >
                <img
                  alt="Approve your Quote & Pay Online"
                  src="icon-pay-online.svg"
                />
              </div>
              <div
                class="remote-features-card-details"
              >
                <div
                  class="remote-features-card-info"
                >
                  <h3
                    class="h5 remote-features-card-title"
                  >
                    Approve your Quote & Pay Online
                  </h3>
                  <p
                    class="remote-features-card-desc"
                  >
                    You can review, approve, and pay for your quote all online!
                  </p>
                </div>
                <a
                  class="button button--primary button--size__medium taste__line remote-features-card-button"
                  href="https://dev.ergeon.com/blog/post/how-our-remote-quoting-works"
                >
                  Learn more
                </a>
              </div>
            </div>
            <div
              class="remote-features-card-sep-wrapper"
            >
              <div
                class="remote-features-card-sep-wrapper-line"
              />
            </div>
            <div
              class="remote-features-card"
            >
              <div
                class="remote-features-card-img"
              >
                <img
                  alt="Stay Inside While We Install Your Fence"
                  src="icon-no-contact-install.svg"
                />
              </div>
              <div
                class="remote-features-card-details"
              >
                <div
                  class="remote-features-card-info"
                >
                  <h3
                    class="h5 remote-features-card-title"
                  >
                    Stay Inside While We Install Your Fence
                  </h3>
                  <p
                    class="remote-features-card-desc"
                  >
                    Our Delivery team is ready with all construction details to perform a contact-free installation.
                  </p>
                </div>
                <a
                  class="button button--primary button--size__medium taste__line remote-features-card-button"
                  href="https://dev.ergeon.com/blog/post/contactless-fence-installation"
                >
                  Learn more
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="video-popup__wrapper"
        >
          <div
            class="fog-popup"
          />
        </div>
      </div>
    </section>
    <section
      class="wrapper-1180"
    >
      <div
        class="GetStarted"
      >
        <div
          class="GetStarted-Wrapper"
        >
          <div
            class="GetStarted-Content is-Before--16 is-RightMargin--20"
          >
            <div>
              <h2
                class="h3 GetStarted-Title"
              >
                Get Started In 4 Simple Steps
              </h2>
              <ol
                class="ordered-list neat is-Before--36"
              >
                <li
                  class="is-After--24"
                >
                  Enter your address and we’ll call you within 24 hours
                </li>
                <li
                  class="is-After--24"
                >
                  Receive a custom quote after onsite consultation
                </li>
                <li
                  class="is-After--24"
                >
                  Book your installation appointment
                </li>
                <li>
                  Have your project installed within 2 weeks
                </li>
              </ol>
            </div>
          </div>
          <div
            class="GetStarted-ImgContainer"
          >
            <img
              class="GetStarted-Image"
              src="easy-to-use.jpg"
            />
          </div>
        </div>
      </div>
    </section>
    <section
      class="wrapper-1180"
    >
      FAQ
    </section>
    <section
      class="wrapper-1180 CityBlog"
    >
      <h2
        class="h3"
      >
        From our Blog
      </h2>
      <div
        class="cards CityBlog-container"
      >
        <div
          class="equal-height-JlocK"
        >
          <a
            class="card soft-border shadow__z0 CityBlog-article"
            href="https://www.ergeon.com/blog/post/what-you-need-to-know-about-california-fence-laws"
          >
            <div
              class="CityBlog-img"
              style="background-image: url(https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1C4Py70nzM_6tt5fw2B7NjHhb6lxnker3.jpeg);"
            />
            <div
              class="CityBlog-content"
            >
              <p>
                If you’re looking to get a new fence in California, it’s important to know about the laws surrounding fences and home improvement projects. Our post will go over some important things to keep in mind.
              </p>
            </div>
            <span
              class="CityBlog-link"
            >
              View more
            </span>
          </a>
        </div>
        <div
          class="equal-height-JlocK"
        >
          <a
            class="card soft-border shadow__z0 CityBlog-article"
            href="https://www.ergeon.com/blog/post/why-you-should-always-use-a-licensed-fence-contractor"
          >
            <div
              class="CityBlog-img"
              style="background-image: url(https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1YMuv2PWFZkdLZ059y8j_343qtakP2fz6.jpeg);"
            />
            <div
              class="CityBlog-content"
            >
              <p>
                When it’s time to get a new fence it’s important to always use a reputable, licensed, and insured contractor. Some people try to cut costs by using unlicensed contractors, but this can end up being a major issue if any problems happen during the installation or down the line. In this post, we’ll go over the main reasons why you should always use a licensed and insured fence contractor.
              </p>
            </div>
            <span
              class="CityBlog-link"
            >
              View more
            </span>
          </a>
        </div>
        <div
          class="equal-height-JlocK"
        >
          <a
            class="card soft-border shadow__z0 CityBlog-article"
            href="https://www.ergeon.com/blog/post/chain-link-vs-wood-fence-style-pros-and-cons"
          >
            <div
              class="CityBlog-img"
              style="background-image: url(https://s3.us-west-2.amazonaws.com/dev.ergeon.com/cities_photos/1egJIFtfUoXdwPwd4UyD7IgyYj9BURtMs.jpeg);"
            />
            <div
              class="CityBlog-content"
            >
              <p>
                There’s a lot to consider when weighing the pros and cons of a wood fence versus a chain link fence. We’ve tried to make the process easier for you by diving deeper into some of the areas of consideration.
              </p>
            </div>
            <span
              class="CityBlog-link"
            >
              View more
            </span>
          </a>
        </div>
      </div>
    </section>
    <section
      class="mobile-length"
    >
      Tell Us Form
    </section>
  </div>
</div>
`;
